# femlab

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  main.py~
src/femlab/: __init__.py  __init__.py~  solve.py  solve.py~
src/femlab/constitutive/: elastic.py
src/femlab/elements/: q2.py  q2.py~
src/femlab/io/: vtu.py  vtu.py~
src/femlab/mesh/: rect_q2.py  rect_q2.py~
src/femlab/postproc/: von_mises.py  von_mises.py~
