[project]
name = "femlab"
version = "0.1.0"
description = "Mini FEM lab for 2D elasticity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
